[metadata]
name = moptipy
version = attr: moptipy.version.__version__
description = A package for metaheuristic optimization in Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    metaheuristics
    optimization
    operations research
    evolutionary algorithm
    hill climber
    experiments
    job shop scheduling
license = GPL 3.0
license_files = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Matplotlib
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Natural Language :: German
    Natural Language :: Chinese (Simplified)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
url = https://thomasweise.github.io/moptipy
author = Thomas Weise
author_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/moptipy
    Source = https://github.com/thomasWeise/moptipy/
    Tracker = https://github.com/thomasWeise/moptipy/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.9
install_requires =
    numpy >= 1.21.6
    numba >= 0.55.1
    matplotlib >= 3.5.2
    psutil >= 5.9.0
    scikit-learn >= 1.1.0

[options.package_data]
moptipy.examples.jssp = *.txt

[options.packages.find]
exclude =
    .github*
    .mypy_cache*
    .pytest_cache*
    dist*
    docs*
    examples*
    tests*
    moptipy.egg-info*
