[metadata]
name = moptipy
version = attr: moptipy.version.__version__
description = A package for metaheuristic optimization in Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    algorithm performance evaluation
    BGFS
    BOBYQA
    continuous optimization
    crossover
    DE
    Differential Evolution
    discrete optimization
    EA
    ECDF
    Empirical Cumulative Distribution Function
    ERT
    Evolutionary Algorithm
    Evolutionary Computation
    Expected Running Time
    experiments
    Frequency Fitness Assignment
    Hill Climber
    Job Shop Scheduling Problem
    JSSP
    metaheuristics
    Memetic Algorithm
    multi-objective optimization
    mutation
    NSGA-II
    optimization
    operations research
    performance plots
    permutations
    Random Sampling
    Random Walk
    Randomized Local Search
    RLS
    Simulated Annealing
    single-objective optimization
    statistics
license = GPL 3.0
license_files = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Matplotlib
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Natural Language :: German
    Natural Language :: Chinese (Simplified)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
url = https://thomasweise.github.io/moptipy
author = Thomas Weise
author_email = tweise@ustc.edu.cn
maintainer = Thomas Weise
maintainer_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/moptipy
    Source = https://github.com/thomasWeise/moptipy/
    Tracker = https://github.com/thomasWeise/moptipy/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.10
install_requires =
    cmaes >= 0.9.1
    numpy >= 1.23.5
    numba >= 0.56.4
    matplotlib >= 3.7.1
    pdfo >= 1.2
    psutil >= 5.9.4
    scikit-learn >= 1.2.2
    scipy >= 1.10.1

[options.package_data]
moptipy.examples.jssp = *.txt

[options.packages.find]
exclude =
    .coverage*
    .github*
    .mypy_cache*
    .pytest_cache*
    .ruff_cache*
    dist*
    docs*
    examples*
    moptipy.egg-info*
    tests*
