[metadata]
name = moptipy
version = attr: moptipy.version.__version__
description = A package for metaheuristic optimization in Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    algorithm performance evaluation
    BGFS
    continuous optimization
    crossover
    DE
    Differential Evolution
    discrete optimization
    EA
    ECDF
    Empirical Cumulative Distribution Function
    ERT
    Evolutionary Algorithm
    Evolutionary Computation
    Expected Running Time
    experiments
    Frequency Fitness Assignment
    Hill Climber
    Job Shop Scheduling Problem
    JSSP
    metaheuristics
    Memetic Algorithm
    multi-objective optimization
    mutation
    NSGA-II
    optimization
    operations research
    performance plots
    permutations
    Plant Propagation Algorithm
    PPA
    Random Sampling
    Random Walk
    Randomized Local Search
    RLS
    Simulated Annealing
    single-objective optimization
    statistics
license = GPL 3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Matplotlib
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Natural Language :: English
    Natural Language :: German
    Natural Language :: Chinese (Simplified)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
url = https://thomasweise.github.io/moptipy
author = Thomas Weise
author_email = tweise@ustc.edu.cn
maintainer = Thomas Weise
maintainer_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/moptipy
    Source = https://github.com/thomasWeise/moptipy/
    Tracker = https://github.com/thomasWeise/moptipy/issues

[options]
include_package_data = True
install_requires =
    cmaes >= 0.12.0
    intel-cmplr-lib-rt >= 2025.3.2
    numpy >= 2.3.5
    numba >= 0.63.1
    matplotlib >= 3.10.8
    psutil >= 7.2.2
    pycommons >= 0.8.88
    scipy >= 1.17.0
packages = find:
python_requires = >= 3.12
zip_safe = False

[options.package_data]
moptipy = py.typed
moptipy.examples.jssp = *.txt

[options.packages.find]
exclude =
    .coverage*
    .github*
    .mypy_cache*
    .pytest_cache*
    .ruff_cache*
    dist*
    docs*
    examples*
    moptipy.egg-info*
    tests*
